cmake_minimum_required(VERSION 3.23)
project(bee_bot)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
#set(CMAKE_PREFIX_PATH C:/Qt/5.15.2/msvc2019_64)
set(CMAKE_INSTALL_PREFIX ./)
find_package(Qt5 COMPONENTS Widgets Core Gui REQUIRED)
add_executable(bee_bot src/main.cpp src/main_window.cpp src/main_window.h src/game_lib/level_button.cpp src/game_lib/level_button.h src/game_lib/game_board.cpp src/game_lib/game_board.h src/game_lib/board_cell.cpp src/game_lib/board_cell.h src/game_lib/bee.cpp src/game_lib/bee.h src/game_lib/level_reader.cpp src/game_lib/level_reader.h src/win_dialog.cpp src/win_dialog.h)
target_link_libraries(bee_bot Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Gui)
install(TARGETS bee_bot DESTINATION bin)
install(DIRECTORY static_files/ DESTINATION bin/static_files)
install(DIRECTORY docs/ DESTINATION bin/docs)
install(FILES $<TARGET_FILE:Qt5::QWindowsIntegrationPlugin> DESTINATION bin/platforms)
install(FILES $<TARGET_FILE:Qt5::QWindowsDirect2DIntegrationPlugin> DESTINATION bin/platforms)
install(FILES $<TARGET_FILE:Qt5::Core> DESTINATION bin)
install(FILES $<TARGET_FILE:Qt5::Gui> DESTINATION bin)
install(FILES $<TARGET_FILE:Qt5::Widgets> DESTINATION bin)